# nnacs

./: CMakeLists.txt  Makefile  NNACS.cbp  README.md  cmake_cbp.bat  cmake_install.sh
.github/workflows/: github-actions-demo.yml
Matrix.041/: CMakeLists.txt  Makefile  Makefile.linux  Matrix.bpr  makefile.dos  makefile.ux  matadd.c  matcreat.c  matdet.c  matdump.c  matdurbn.c  materr.c  matinv.c  matmul.c  matrix.cbp  matrix.h  matsolve.c  matsub.c  matsubx.c  mattoepz.c  mattran.c  read.me
NaTools/: AnTrainNN.cpp  BackNN.cpp  CMakeLists.txt  Distr1D.cpp  Distr2D.bpr  Distr2D.cpp  ErrInvNN.cpp  EvalNN.cpp  FileCvt.cpp  MakeNN.bpr  MakeNN.cpp  Makefile  Makefile.linux  NaTools.cbp  ResetNN.cpp  StatAn.bpr  StatAn.cpp  TrainNN.cpp  UNGen.bpr  UNGen.cpp  test.nn  test2.nn  test2_1.nn  test2_10.nn  test3_1.nn  test3_10.nn  test_for_TrainNN.sh
NaTools/antrain/: iris1_ini.nn  iris_in.ids  xor_in.ids  xor_ini.nn
NeuArch/: CMakeLists.txt  FileCvt.bpr  FileCvt.cpp  Makefile  Makefile.linux  Makefile.wcc  NaBinrIO.cpp  NaBinrIO.h  NaCoFunc.cpp  NaCoFunc.h  NaConLaw.cpp  NaConLaw.h  NaConfig.cpp  NaConfig.h  NaCuFunc.cpp  NaCuFunc.h  NaDDir.cpp  NaDDir.h  NaDataIO.cpp  NaDataIO.h  NaDataSet.cpp  NaDataSet.h  NaDynAr.cpp  NaDynAr.h  NaExFunc.cpp  NaExFunc.h  NaExcept.cpp  NaExcept.h  NaGenerl.h  NaInfoSt.cpp  NaInfoSt.h  NaInvPnd.cpp  NaInvPnd.h  NaLM.cpp  NaLM.h  NaLiNois.cpp  NaLiNois.h  NaLinCon.cpp  NaLinCon.h  NaLogFil.cpp  (+176 more)
NeuArch/ExFuncs/: CMakeLists.txt  Makefile  cstr.cpp  cstr.h  cstrpar.def  deadzone.cpp  deadzone.h  dummy.cof  dummy.cpp  dummy.h  luft.cpp  luft.h  polynomial.cpp  polynomial.h  randmeander.cpp  randmeander.h  randunified.cpp  randunified.h  saturat.cpp  saturat.h  sine.cpp  sine.h  test_polynomial.cof  watertank.cpp  watertank.h
dcontrf/: CMakeLists.txt  Makefile  Makefile.linux  NaNNOCL.cpp  NaNNOCL.h  NaNNOCL2.cpp  NaNNOCL2.h  dcontrf.cbp  dcontrf.cpp  dcontrf.par
dcontrp/: CMakeLists.txt  Makefile  Makefile.linux  NaNNCPL.cpp  NaNNCPL.h  dcontrp.cbp  dcontrp.cpp  dcontrp.par  gentestset.par  gentrset.par
dcontrp/mimo_test/: dcontrp.par
dcsloop/: CMakeLists.txt  Makefile  Makefile.linux  NaCSM.cpp  NaCSM.h  contr.tf  dcsloop.cbp  dcsloop.cpp  dcsloop.par  dcstest.par  dcstest2.par  noise.tf  unit.tf  wiener.tf  zero.tf
dcsloop/mimo_test/: contr.tf  dcsloop.par  noise.tf  plant.tf  refer.tf
dcsloop/mimo_test_nnc/: dcsloop.par  nnc_ini.nn
dplantid/: CMakeLists.txt  Makefile  Makefile.linux  NaNNRPL.cpp  NaNNRPL.h  dnnplant.cpp  dplantid.cbp  dplantid.cpp  dplantid.par
dplantid/mimo_test/: dplantid.par  nnp_ini.nn
dtools/: CMakeLists.txt  Makefile  Makefile.linux  d2ts.cpp  daccum.cpp  dconst.cpp  dcorr.cpp  djacob.cpp  dmean.cpp  dmeander.cpp  dmse.cpp  dmult.cpp  drand.cpp  drandmea.cpp  dranduni.cpp  dsin.cpp  dsmooth.cpp  dstat.cpp  dstatsb.cpp  dstatsb_test.sh  dstatsb_test_report.plt  dstddev.cpp  dsteps.cpp  dsub.cpp  dsum.cpp  dtf.cpp  dtfinfo.cpp  dtools.cbp  dwtest.cpp  dwtest2.cpp  mimo_1i2o.tf
err_inv/: plot_xor5.py  xor5_all.plt  xor5_ini.nn  xor_gen.c
err_inv/inp_cor0/: run.sh
err_inv/inp_cor1/: run.sh
nninvf/: CMakeLists.txt  nninvf.cpp  sin1.m
nnjacob/: extract_mean_j_bpe.sh  extract_test_mse.sh  jreport.plt  lin_est.sh  plant.ssm  prepare_data.sh  prepare_nnp.sh  tmse_meanj.eps  tmse_meanj.plt  tmse_meanj.sh  with_delays.sh
nnjacob/nnp_1+1/: lin_est.sh  report.plt  scan_epoch.sh
nnjacob/nnp_1+2/: lin_est.sh  report.plt  scan_epoch.sh
nnjacob/plantA/: prepare_pikes.sh
nnjacob/plantB/: dplantid_template.par  train_nnp.sh
nnjacob/plantC/: gen_nnp.sh  prepare_data.sh  prepare_data_randmea.sh  prepare_pikes.sh  train_nnp.sh
noc_etalon/: README  noise.tf  pid.tf  pid_bad.tf  plant.tf  refer.tf  run.sh  wiener.tf  woc.tf
noc_etalon/0ev/: dcsloop.par
noc_etalon/0ssm/: dcsloop.par  test.sh
noc_etalon/0tf/: dcsloop.par  test.sh
noc_etalon/0tr/: dcsloop.par
noc_etalon/1/: dcsloop.par  dplantid.par  nnp_ini.nn  nnp_res.nn  report.plt
noc_etalon/2/: dcontrp.par  ini.nnc  pre.nnc  report.plt
noc_etalon/3/: res.nnc  (+2 more)
noc_labs/: CMakeLists.txt  Makefile  Makefile.linux  balloon.tcl  cofedit.tcl  coftest.tcl  data_file.tcl  draw_nn.tcl  draw_prim.tcl  dup-labels.sh  dup-uniq-labels  files_loc.tcl  getoptbyrs.tcl  i18n_actions.txt  insert_mc.sh  labels2msg.sh  main.tcl  nnacs.ad  nnacs.desktop  nnacs.tcl  nndisplay.tcl  nnio.tcl  noc_labs.cbp  par_file.tcl  parwtest.tcl  progressbar.tcl  screenshot.tcl  setnnacs.bat  ssm_file.tcl  test_file_ssm.tcl  test_gui_ssm.tcl  test_load_ssm.tcl  universal.tcl  win_checkpnt.tcl  win_cofunc.tcl  win_controller.tcl  win_cusum.tcl  win_dcontrf.tcl  win_dcontrp.tcl  win_dcsloop.tcl  (+20 more)
noc_labs/formulas/: Makefile  formulas.tex
noc_labs/labworks/Examples/: nnc_as_pid.nn  nnc_final.nn  nnc_initial.nn  nnp_initial.nn  nnp_result.nn  noise.tf  pid.tf  pid_bad.tf  plant.tf  refer.tf  wiener.tf  woc.tf
noc_labs/labworks/Examples/001/: dcsloop.par
noc_labs/labworks/Examples/002/: dcsloop.par
noc_labs/labworks/Examples/003/: dcsloop.par
noc_labs/labworks/Examples/004/: dcsloop.par
noc_labs/labworks/Examples/005/: dcsloop.par
noc_labs/labworks/Examples/006/: dcsloop.par
noc_labs/labworks/Examples/007/: dcontrp.par
noc_labs/labworks/Examples/008/: dplantid.par
noc_labs/labworks/Examples/009/: dcontrf.par
noc_labs/msgs/: en.msg  ru_ru.msg
noc_labs/templates/: 1st_order.tf  2nd_order.tf  3rd_order.tf  Makefile  dcontrf.par  dcontrp.par  dcsloop.par  dcsloop_cusum.par  deadzone.cof  delay1.tf  delay2.tf  delay3.tf  dplantid.par  dtf.par  gain.tf  inertial1_tf  integral.tf  mimo_2i3o.tf  pid_kkk.tf  pid_ktt.tf
noc_labs/testdata/: d.tf  orig.test.par  plant.tf  test.cof  test.nn  test2.nn
noc_labs/testnn/: nna_1i1o_3+2.nn  nna_2i2o_3+2.nn  nnc_1i1o_e.nn  nnc_1i1o_re.nn  nnc_1i1o_reSe.nn  nnc_2i2o_e.nn  nnc_2i2o_re.nn  nnc_2i2o_reSe.nn  nnp_1i2o_2+1.nn
sit_probes/: nndescr.txt  read_nn.sitl.TXT  test2.nn  write_nn.sitl.TXT  Работа с файлом.prt
test_mimo/: CMakeLists.txt  plant.ssm  plant.tf  plant_8x2x2.ssm  test.ssm  test_2x2.ssm  test_mimo.cpp  test_mimo.sh
(+68 files in other folders)
